--- a/src/components/common/button/button.module.css
+++ b/src/components/common/button/button.module.css
@@ -7,7 +7,7 @@
   background: transparent;
   color: var(--text-primary);
   font-family: var(--mono-font-family);
-  font-size: var(--font-size-body);
+  font-size: var(--font-size-base);
   gap: var(--spacing-3);
   text-decoration: none;
   transition: var(--transition-all);
