--- a/src/css/tokens.css
+++ b/src/css/tokens.css
@@ -4,3 +4,4 @@
 @import url('./border-tokens.css');
 @import url('./animation-tokens.css');
 @import url('./shadow-tokens.css');
+@import url('./z-index-tokens.css');
