--- a/src/components/layout/header/logo.module.css
+++ b/src/components/layout/header/logo.module.css
@@ -30,8 +30,8 @@
 }
 
 .logo-icon {
-  width: 64px;
-  min-width: 64px;
+  width: var(--spacing-16);
+  min-width: var(--spacing-16);
 }
 
 .logo {
@@ -72,7 +72,7 @@
   /* Mobile: wrap to new line if too cramped */
   @media (--xs-only) {
     flex-basis: 100%;
-    font-size: 11px;
+    font-size: var(--font-size-2xs);
   }
 
   /* Small tablets: hide if space is tight */
