--- a/src/components/layout/stack/stack.module.css
+++ b/src/components/layout/stack/stack.module.css
@@ -14,6 +14,18 @@
    Space Variants - Using design tokens
    ======================================================================== */
 
+.none {
+  gap: 0;
+}
+
+.minimal {
+  gap: var(--spacing-1);
+}
+
+.tiny {
+  gap: var(--spacing-4);
+}
+
 .small {
   gap: var(--spacing-8);
 }
@@ -46,23 +58,68 @@
   }
 
   @media (--md-n-above) {
-    gap: var(--stack-gap-md, var(--stack-gap-sm, var(--stack-gap-xs, var(--stack-gap-base))));
+    gap: var(
+      --stack-gap-md,
+      var(--stack-gap-sm, var(--stack-gap-xs, var(--stack-gap-base)))
+    );
   }
 
   @media (--lg-n-above) {
-    gap: var(--stack-gap-lg, var(--stack-gap-md, var(--stack-gap-sm, var(--stack-gap-xs, var(--stack-gap-base)))));
+    gap: var(
+      --stack-gap-lg,
+      var(
+        --stack-gap-md,
+        var(--stack-gap-sm, var(--stack-gap-xs, var(--stack-gap-base)))
+      )
+    );
   }
 
   @media (--xl-n-above) {
-    gap: var(--stack-gap-xl, var(--stack-gap-lg, var(--stack-gap-md, var(--stack-gap-sm, var(--stack-gap-xs, var(--stack-gap-base))))));
+    gap: var(
+      --stack-gap-xl,
+      var(
+        --stack-gap-lg,
+        var(
+          --stack-gap-md,
+          var(--stack-gap-sm, var(--stack-gap-xs, var(--stack-gap-base)))
+        )
+      )
+    );
   }
 
   @media (--2xl-n-above) {
-    gap: var(--stack-gap-2xl, var(--stack-gap-xl, var(--stack-gap-lg, var(--stack-gap-md, var(--stack-gap-sm, var(--stack-gap-xs, var(--stack-gap-base)))))));
+    gap: var(
+      --stack-gap-2xl,
+      var(
+        --stack-gap-xl,
+        var(
+          --stack-gap-lg,
+          var(
+            --stack-gap-md,
+            var(--stack-gap-sm, var(--stack-gap-xs, var(--stack-gap-base)))
+          )
+        )
+      )
+    );
   }
 
   @media (--3xl-n-above) {
-    gap: var(--stack-gap-3xl, var(--stack-gap-2xl, var(--stack-gap-xl, var(--stack-gap-lg, var(--stack-gap-md, var(--stack-gap-sm, var(--stack-gap-xs, var(--stack-gap-base))))))));
+    gap: var(
+      --stack-gap-3xl,
+      var(
+        --stack-gap-2xl,
+        var(
+          --stack-gap-xl,
+          var(
+            --stack-gap-lg,
+            var(
+              --stack-gap-md,
+              var(--stack-gap-sm, var(--stack-gap-xs, var(--stack-gap-base)))
+            )
+          )
+        )
+      )
+    );
   }
 }
 
@@ -72,7 +129,7 @@
 
 .divider {
   width: 100%;
-  height: 1px;
+  height: var(--spacing-0-1);
   border: none;
   margin: 0;
   background: var(--border-default-color);
